    --architecture-- KChooseDir was rewritten. plz have a look at the code/email 
    --architecture-- move listpanel from qstring to kurl. plz read email before continuing! --
    ADDED: searcher: ask for a collection-name on feed to listbox
    ADDED: popular urls is now persistent
    ADDED: popular-urls - krusader's answer to google-ranking ;-)
    ADDED: better completion in the origin box: constructs such as ~/src and $QTDIR/bin 
           should work now.
    ADDED: Slovenian translation (thanks Matej Urbancic)
    ADDED: bookmarks can now be placed into toolbars
    ADDED: searcher, feed to listbox (with virtual folders)
    ADDED: Primitive scripting support; Warning: very alpha!!
    ADDED: new toolbar for actions. use view->show actions toolbar. you'll need to 
           remove ~/.kde/share/apps/krusaderui.rc to see it
    ADDED: refresh-in-the-background for remote urls and for archives
    ADDED: changing the coloumns by right clicking on the panel's header
    ADDED: color scheme export/import
    ADDED: an other .desktop-file with the red icon that starts krusader as root
    ADDED: useraction: now every placeholder can cancel the execution. (-> %_ask(..)%)
    ADDED: useraction: new placeholder: %_PanelSize(percent)%
    ADDED: Synchronizer, pause/resume button for synchronize with kget
    ADDED: disk usage (tools menu + 3rd panel)
    ADDED: useraction: new placeholder: %_Move(src, dest)%
    ADDED: useraction: new placeholder: %_Each%
    ADDED: full viewer in the 3rd hand
    ADDED: shift-del deletes and doesn't move to trash
    ADDED: splitter: pre-defined 650MB and 700MB CD-R
    ADDED: more Konfigurator Tooltips    
    ADDED: usermenu: entry to open konfigurator with the useraction-page directly
    ADDED: import/export of keyboard shortcuts
    ADDED: mouse selection modes are back! thanks to heiner for doing the work
    ADDED: virtual VFS (try virt:/somthing/)

    FIXED: [ 1110507 ] cannot open rpm package if path contains space