@@ -119,7 +119,7 @@ class Krusader : public KParts::MainWindow {
     static KAction *actKonfigurator, *actToolsSetup, *actBack, *actRoot, *actFind, *actDirUp;
     static KAction *actSelectColorMask, *actMultiRename, *actAllFilter, *actOpenLeftBm, *actOpenRightBm;
     static KAction *actNewTab, *actDupTab, *actCloseTab, *actPreviousTab, *actNextTab, *actSplit; 
-	 static KAction *actCombine, *actUserMenu, *actSyncDirs;
+	 static KAction *actCombine, *actUserMenu, *actManageUseractions, *actSyncDirs;
 	 static KAction *actF2, *actF3, *actF4, *actF5, *actF6, *actF7, *actF8, *actF9, *actF10;
 	 static KAction *actPopularUrls;
     static KToggleAction *actToggleTerminal;
@@ -142,6 +142,8 @@ class Krusader : public KParts::MainWindow {
     KrusaderStatus *status;
     KRslots *slot;
     KAccel *accels; // global accelerators
+    
+    static KPopupMenu *userActionMenu;
     static UserMenu *userMenu;
     static UserAction *userAction;
     static Expander *expander;
@@ -223,6 +225,7 @@ class Krusader : public KParts::MainWindow {
 #define krSplit           Krusader::App->actSplit
 #define krCombine         Krusader::App->actCombine
 #define krUserMenu        Krusader::App->actUserMenu
+#define krUserActionMenu      Krusader::App->userActionMenu
 #define krUserAction      Krusader::App->userAction
 #define krExpander        Krusader::App->expander
 #define krF2				  Krusader::App->actF2
