@@ -86,6 +86,11 @@
    <Action name="save position" />
    <Separator/>
   </Menu>
+  <Menu name="useractionmenu" >
+   <text>&amp;Useractions</text>
+   <Action name="manage useractions" />
+   <Separator/>
+  </Menu>
   <Menu name="help" >
    <text>&amp;Help</text>
   </Menu>
