@@ -1,3 +1,4 @@
+    ADDED: Useractions in the menubar (need an update of krusaderui.rc)
     --architecture-- KChooseDir was rewritten. plz have a look at the code/email 
     --architecture-- move listpanel from qstring to kurl. plz read email before continuing! --
     ADDED: searcher: ask for a collection-name on feed to listbox
